# RETL

./: .gitignore  CLAUDE.md  Cargo.toml  LATTICE_TASK.md  README.md  plan.md  readme.md
.claude/: settings.local.json
.github/workflows/: release.yml
benches/: inner_loops.rs
benches/data/: sample.jsonl
docs/: default_bots.md  monitoring.md  query_cookbook.md
examples/: authors_chained.rs  csv_export.rs  parents_pipeline.rs  partitioned_export.rs  quickstart.rs  whitelist_extract.rs
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/fuzz_parse_minimal/: seed_006.json  seed_011.json  seed_027.json  seed_031.json  seed_034.json  seed_036.json  seed_041.json  seed_042.json  seed_044.json  seed_050_year_9999.json
fuzz/corpus/fuzz_rewrite_timestamps/: seed_001.json  seed_007.json  seed_009.json  seed_012.json  seed_018.json  seed_020.json  seed_028.json  seed_033.json  seed_037.json  seed_038.json  seed_039.json  seed_040.json  seed_043.json  seed_045.json  seed_046.json
fuzz/corpus/fuzz_whitelist_tokenizer/: seed_002.json  seed_003.json  seed_004.json  seed_005.json  seed_008.json  seed_010.json  seed_013.json  seed_014.json  seed_015.json  seed_016.json  seed_017.json  seed_019.json  seed_021.json  seed_022.json  seed_023.json  seed_024.json  seed_025.json  seed_026.json  seed_029.json  seed_030.json  seed_047_tab_after_colon.json
fuzz/fuzz_targets/: fuzz_parse_minimal.rs  fuzz_rewrite_timestamps.rs  fuzz_whitelist_tokenizer.rs
manifests/: reddit_corpus_manifest.v1.json
src/: agg_expr.rs  aggregate.rs  atomic_write.rs  bin_args.rs  bin_handlers.rs  bin_helpers.rs  bucketing.rs  concurrency.rs  config.rs  corpus_manifest.rs  counting.rs  date.rs  dedupe.rs  examples.rs  filters.rs  integrity.rs  json_utils.rs  json_whitelist.rs  key_extractor.rs  kv_shard.rs  lib.rs  main.rs  mem.rs  ndjson.rs  parents.rs  parents_ids.rs  parquet_writer.rs  partition.rs  paths.rs  pipeline.rs  pipeline_exec.rs  progress.rs  progress_manifest.rs  progress_manifest_testing.rs  query.rs  run_manifest.rs  shard.rs  shard_common.rs  stitch.rs  streaming.rs  (+3 more)
src/aggregate/: CLAUDE.md  build.rs  merge.rs  mod.rs  paths.rs  publish.rs  types.rs
src/atomic_write/: CLAUDE.md  mod.rs  naming.rs  sweep.rs  testing.rs  writer.rs
src/bin_args/: CLAUDE.md  aggregate.rs  common.rs  convert.rs  corpus.rs  count.rs  dedupe.rs  describe.rs  export.rs  first_seen.rs  integrity.rs  load.rs  mod.rs  parents.rs  parsers.rs  quickstart.rs  sample.rs  scan.rs  schema.rs
src/bin_handlers/: CLAUDE.md  aggregate.rs  cli_manifest.rs  common.rs  convert.rs  corpus.rs  count.rs  dedupe.rs  describe.rs  export.rs  first_seen.rs  integrity.rs  load.rs  mod.rs  parents.rs  parents_helpers.rs  quickstart.rs  sample.rs  scan.rs  schema.rs  tests.rs
src/bin_helpers/: CLAUDE.md  aggregate.rs  build.rs  etl.rs  io.rs  mod.rs  plan.rs  query_predicates.rs
src/bucketing/: CLAUDE.md  cfg.rs  hash.rs  micro.rs  mod.rs  routing.rs
src/config/: CLAUDE.md  limits.rs  mod.rs  options.rs  partial_read.rs  sources.rs  tests.rs
src/corpus_manifest/: CLAUDE.md  load.rs  local.rs  mod.rs  plan.rs  types.rs
src/dedupe/: CLAUDE.md  cfg.rs  merge.rs  mod.rs  runs.rs
src/filters/: bounds.rs  ci.rs  full.rs  minimal.rs  mod.rs  targets.rs  text.rs  url.rs
src/json_whitelist/: CLAUDE.md  mod.rs  skip.rs  tests.rs  timestamps.rs  tokenizer.rs
src/obs/: CLAUDE.md  events.rs  handle.rs  mod.rs  options.rs  sink.rs  status.rs  tracing_layer.rs  watchdog.rs
src/parents/: CLAUDE.md  attach.rs  attach_pipeline.rs  diagnostics.rs  direct.rs  fingerprint.rs  fingerprint_types.rs  ids.rs  impls.rs  mod.rs  payload.rs  resolve.rs  resolver.rs  resolver_tail.rs  tests.rs  types.rs
src/parents_ids/: CLAUDE.md  collect.rs  dedupe.rs  mod.rs  scratch.rs  shards.rs  shared_cache.rs  worker_cache.rs  writer.rs
src/paths/: CLAUDE.md  diagnostics.rs  discover.rs  mod.rs  plan.rs  types.rs
src/pipeline/: CLAUDE.md  etl_builder.rs  mod.rs  scan_builder.rs  tests.rs
src/pipeline_exec/: CLAUDE.md  analytics.rs  checkpoint.rs  dedupe_keys.rs  entry_points.rs  extract.rs  extract_common.rs  fingerprint.rs  limits.rs  mod.rs  partitioned.rs  resume_run.rs  scan.rs  scan_records.rs  spool.rs  tabular.rs  tests.rs  types.rs  usernames.rs
src/query/: CLAUDE.md  mod.rs  normalize.rs  predicates.rs  record_ids.rs  spec.rs  tests.rs  timestamps.rs  validation.rs  validation_tail.rs
src/run_manifest/: CLAUDE.md  fingerprint.rs  identity.rs  identity_tail.rs  mod.rs  options.rs  path_stability.rs  paths.rs  types.rs  upstream.rs  write.rs  write_tail.rs
src/streaming/: CLAUDE.md  job.rs  limit.rs  mod.rs  tests.rs  timestamps.rs  usernames.rs  whitelist_tracker.rs
src/util/: CLAUDE.md  backoff.rs  exclusions.rs  mod.rs  scratch.rs  thread_pool.rs  tracing.rs
src/zstd_jsonl/: CLAUDE.md  errors.rs  line_stream.rs  minimal.rs  mod.rs  tests.rs
tests/: agg_expr.rs  aggregate.rs  aggregate_merge_bench.rs  atomic_replace_fallback.rs  backpressure_bucketing.rs  builder_validation.rs  cli_aggregate.rs  cli_describe.rs  cli_exclude_common_bots.rs  cli_export.rs  cli_help.rs  cli_id_filters.rs  cli_out_and_limit.rs  cli_query_validation.rs  cli_scan_count_atomic.rs  cli_shard_stability.rs  concurrency.rs  counts_and_first_seen.rs  dedupe_cli.rs  deprecated_usernames_resume.rs  examples.rs  examples_usernames.rs  exclude_bots_env.rs  export_empty_match.rs  export_interruption.rs  export_jsonl_resume.rs  extract_and_export.rs  extract_json_array.rs  extract_output_order_stability.rs  human_timestamps_edge_cases.rs  id_filters.rs  integrity.rs  integrity_truncation.rs  json_pointer_filters.rs  json_utils_test.rs  json_whitelist_proptest.rs  lambdas.rs  long_line.rs  mem_throttle.rs  monitoring.rs  (+26 more)
tests/cli_aggregate/: atomic_output.rs  counts_and_metrics.rs  error_reporting.rs  inputs.rs
tests/common/: cli.rs  mod.rs  parents.rs  spool.rs
tests/parents_cli/: direct_ids.rs  readme_workflow.rs  warnings.rs  whitelist.rs
tests/parents_pipeline/: atomic_staging.rs  attach_resume.rs  diagnostics.rs  end_to_end.rs  payload_fields.rs  (+1 more)
(+98 files in other folders)
