[package]
name = "retl"
version = "0.1.0"
edition = "2021"
description = "RETL (Reddit ETL) – fast, streaming ETL toolkit for the Reddit monthly RC/RS corpus"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourname/retl"
keywords = ["reddit", "etl", "zstd", "jsonl", "data-engineering"]
categories = ["command-line-utilities", "data-processing"]
publish = false

[dependencies]
anyhow = "1"
regex = "1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["parsing", "macros", "formatting"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
zstd = "0.13"
parking_lot = "0.12"
ahash = "0.8"
indicatif = "0.17"
sysinfo = "0.29"

[features]
default = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
incremental = false

[dev-dependencies]
tempfile = "3"
