[workspace]
members = ["."]
exclude = ["fuzz"]

[package]
name = "retl"
version = "0.1.0"
edition = "2021"
description = "RETL (Reddit ETL) – fast, streaming ETL toolkit for the Reddit monthly RC/RS corpus"
readme = "README.md"
license = "MIT"
repository = "https://github.com/sjlynch/retl"
homepage = "https://github.com/sjlynch/retl"
documentation = "https://github.com/sjlynch/retl#readme"
keywords = ["reddit", "etl", "zstd", "jsonl", "data-engineering"]
categories = ["command-line-utilities", "data-processing"]
publish = false

[dependencies]
anyhow = "1"
regex = "1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
sha2 = "0.10"
time = { version = "0.3", features = ["parsing", "macros", "formatting"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
walkdir = "2"
zstd = "0.13"
parking_lot = "0.12"
ahash = "0.8"
indicatif = "0.17"
sysinfo = "0.33"
aho-corasick = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
# Optional: enables the `retl load` subcommand that materializes Parquet
# output into a DuckDB database file. The crate bundles libduckdb and adds
# ~10s to clean builds, so it is gated behind the `duckdb-load` feature.
duckdb = { version = "1", features = ["bundled"], optional = true }

[features]
default = []
# Exposes test-only injection points and hooks used by integration tests:
#   * `set_available_memory_fraction_for_tests` (see `src/mem.rs`) lets tests
#     drive process-global memory-pressure state deterministically.
#   * the bounded-channel buffered-bytes metric on `process_bucket_streaming`
#     lets tests assert backpressure invariants.
# Off by default; production builds (`--no-default-features`) carry no
# overhead — gated parameters are absent from function signatures when the
# feature is off.
test-utils = []
# Enables the `retl load` subcommand (Parquet → DuckDB).
# Off by default because the bundled libduckdb dependency adds ~10s to
# clean builds. Without the feature `retl load` parses but errors out
# with a rebuild hint.
duckdb-load = ["dep:duckdb"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
incremental = false

# Tests are dominated by zstd encode/decode, serde_json::from_str, and
# aho-corasick automaton work — all of which run dramatically faster at
# opt-level >= 2. The crate's own compile cost is small relative to those
# deps (which are cached across runs), so the wall-time win is large while
# the incremental rebuild cost barely moves.
[profile.test]
opt-level = 2
debug = 1
incremental = true

# Keep iterative dev builds quick but lift the most expensive dep code
# (serde_json::Value parsing, regex/aho-corasick) out of opt-level 0.
[profile.dev]
opt-level = 1
debug = 1

[dev-dependencies]
tempfile = "3"
serial_test = "3"
assert_cmd = "2"
predicates = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "inner_loops"
harness = false

# `mem_throttle` drives a test-only setter that lives behind the `test-utils`
# feature gate (see `src/mem.rs`). Run with `cargo test --features test-utils`.
[[test]]
name = "mem_throttle"
path = "tests/mem_throttle.rs"
required-features = ["test-utils"]

# `backpressure_bucketing` asserts the bounded-channel invariants on
# `process_bucket_streaming` using the `test-utils`-gated buffered-bytes
# metric. Run with `cargo test --features test-utils`.
[[test]]
name = "backpressure_bucketing"
required-features = ["test-utils"]
