[package]
name = "retl-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Keep the cargo-fuzz crate independent from the repository workspace when
# commands are run from `fuzz/` or with `--manifest-path fuzz/Cargo.toml`.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
# `fuzz_whitelist_tokenizer` uses a `serde::de::Visitor` to count duplicate
# top-level keys (which `serde_json::Value` would otherwise collapse).
serde = "1"
serde_json = "1"

[dependencies.retl]
path = ".."

# Each fuzz target is its own bin. `test = false` / `doc = false` / `bench = false`
# keep the targets out of `cargo test` / `cargo doc` / `cargo bench`, which is
# important because they require nightly + libfuzzer instrumentation.

[[bin]]
name = "fuzz_parse_minimal"
path = "fuzz_targets/fuzz_parse_minimal.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rewrite_timestamps"
path = "fuzz_targets/fuzz_rewrite_timestamps.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_whitelist_tokenizer"
path = "fuzz_targets/fuzz_whitelist_tokenizer.rs"
test = false
doc = false
bench = false
